# Financial-reimbursement-management-system

./: CMakeLists.txt  README.md  admin.h  identify.h  main.cpp  managesystem.cpp  managesystem.h  person.cpp  person.h  progress.cpp  progress.h  staff.cpp  staff.h  报销人员信息.txt  管理员信息.txt  财务报销管理系统.sln
财务报销管理系统/: admin.cpp  allfiles.h  aqt.cpp  aqt.h  main.cpp  myvector.cpp  myvector.h  vector.hpp  审批人员信息.txt  审批人额度授权表.txt  报销人员进度信息.txt  财务报销管理系统.vcxproj  财务报销管理系统.vcxproj.filters
财务报销管理系统/Debug/: admin.obj.enc  managesystem.obj.enc  staff.obj.enc  vc142.idb  财务报销管理系统.exe.recipe  财务报销管理系统.ilk
财务报销管理系统/Debug/财务报销管理系统.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  财务报销管理系统.lastbuildstate
财务报销管理系统/Release/: 财务报销管理系统.exe.recipe  财务报销管理系统.iobj  财务报销管理系统.ipdb
财务报销管理系统/Release/财务报销管理系统.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  财务报销管理系统.lastbuildstate
财务报销管理系统/x64/Debug/: vc143.idb  财务报销管理系统.exe.recipe  财务报销管理系统.ilk
财务报销管理系统/x64/Debug/财务报销管理系统.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  财务报销管理系统.lastbuildstate
